--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,10 +12,10 @@ jobs:
         with:
           node-version: "14"
 
-      - name: yarn install, build
-        run: |
-          yarn install
-          yarn build
+      # - name: yarn install, build
+      #   run: |
+      #     yarn install
+      #     yarn build
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
