--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,8 @@ jobs:
           S3_UPLOAD_BUCKET: ${{ secrets.S3_BUCKET }}
         run: |
           aws s3 rm s3://$S3_UPLOAD_BUCKET --recursive
-          aws s3 cp build s3://$S3_UPLOAD_BUCKET --recursive
+
+          aws s3 cp s3://$S3_UPLOAD_BUCKET --recursive
 
       - name: make invalidation to cloudfront
         uses: chetan/invalidate-cloudfront-action@master
