--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
         env:
           S3_UPLOAD_BUCKET: ${{ secrets.S3_BUCKET }}
         run: |
-          aws s3 rm s3://$S3_UPLOAD_BUCKET --recursive
+          # aws s3 rm s3://$S3_UPLOAD_BUCKET --recursive
 
           aws s3 cp sample.txt s3://$S3_UPLOAD_BUCKET/sample.txt --recursive
 
