--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
 
 
-          aws s3 cp sample.txt s3://$S3_UPLOAD_BUCKET/ --recursive
+          aws s3 cp sample.txt/ s3://$S3_UPLOAD_BUCKET/ --recursive
 
       - name: make invalidation to cloudfront
         uses: chetan/invalidate-cloudfront-action@master
