--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,14 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: "14"
-
-      # - name: yarn install, build
-      #   run: |
-      #     yarn install
-      #     yarn build
+      # - uses: actions/setup-node@v1
+      #   with:
+      #     node-version: "14"
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
